added reset button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 <div class="container">
     <h1 id="welc">welcome</h1>
+    <button class="hide reset" onclick="reload()">Reset</button>
     <div class="parent child1">
         <div class="child2">
             <div class="child3">
@@ -24,7 +25,7 @@
     </div>
 </div>
 <div class="btnContain">
-    <button>push me</button>
+    <button id="push" >push me</button>
 </div>
     
 </body>
